shap adjusted + dashboard

--- a/data_preparation_v1.ipynb
+++ b/data_preparation_v1.ipynb
@@ -179,7 +179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('le_classes.pkl', 'wb') as f:\n",
+    "with open('le_classes_fine.pkl', 'wb') as f:\n",
     "    pickle.dump(le.classes_, f)"
    ]
   },
