--- a/data_preparation_v2.ipynb
+++ b/data_preparation_v2.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "import csv\n",
     "import cv2\n",
     "import os\n",
+    "import pickle\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np \n",
     "import tensorflow as tf\n",
@@ -35,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -123,14 +125,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'VideoGames', 'Automobile,Comedy', 'Tech', 'Comedy', 'News', 'Science', 'Informative', 'Automobile', 'Entertainment', 'Blog,Entertainment', 'Blog,Science', 'Entertainment,Blog', 'Tech,Comedy', 'Food,Entertainment', 'Tech,News', 'Entertainment,Comedy', 'Comedy,Informative', 'Tech,Informative', 'Blog,Comedy', 'Blog', 'Comedy,Entertainment', 'Food'}\n"
+      "{'Blog,Entertainment', 'Tech,Informative', 'VideoGames', 'Comedy,Informative', 'Tech,Comedy', 'Entertainment', 'Blog,Science', 'Entertainment,Comedy', 'Comedy,Entertainment', 'Comedy', 'Informative', 'Automobile', 'Blog', 'Blog,Comedy', 'Tech,News', 'News', 'Tech', 'Food,Entertainment', 'Automobile,Comedy', 'Food', 'Entertainment,Blog', 'Science'}\n"
      ]
     }
    ],
@@ -150,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2537,13 +2539,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "le = LabelEncoder()\n",
     "y_encoded = le.fit_transform(y_coarse)\n",
     "y_one_hot = to_categorical(y_encoded)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('le_classes_coarse.pkl', 'wb') as f:\n",
+    "    pickle.dump(le.classes_, f)"
    ]
   },
   {
