--- a/data_preparation_v2.ipynb
+++ b/data_preparation_v2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -126,14 +126,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Automobile,Comedy', 'Blog,Entertainment', 'Entertainment,Blog', 'Comedy,Informative', 'Entertainment', 'Entertainment,Comedy', 'Informative', 'Tech,Comedy', 'Comedy', 'Science', 'Blog,Science', 'Food', 'Automobile', 'Tech,Informative', 'Blog', 'Tech', 'Blog,Comedy', 'News', 'Tech,News', 'VideoGames', 'Food,Entertainment', 'Comedy,Entertainment'}\n"
+      "{'Blog', 'Blog,Comedy', 'Comedy', 'Entertainment,Comedy', 'Tech,Informative', 'Automobile,Comedy', 'Tech,News', 'Blog,Science', 'Tech', 'Informative', 'Tech,Comedy', 'Science', 'Comedy,Informative', 'News', 'Food,Entertainment', 'Entertainment', 'Entertainment,Blog', 'Blog,Entertainment', 'Comedy,Entertainment', 'Automobile', 'VideoGames', 'Food'}\n"
      ]
     }
    ],
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2505,14 +2505,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'information': 689, 'technology': 513, 'comedy': 174, 'entertainment': 164, 'food': 268, 'blog': 234, 'automotive': 261}\n"
+      "{'blog': 234, 'automotive': 261, 'comedy': 174, 'food': 268, 'entertainment': 164, 'information': 689, 'technology': 513}\n"
      ]
     }
    ],
@@ -2527,7 +2527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2540,7 +2540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21864,7 +21864,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for key, value in model_dict.items():\n",
+    "    flatten = Flatten()(value.output)\n",
+    "    if key == \"vgg_16\" or key == \"xception\":\n",
+    "        dense1 = Dense(128, activation=\"relu\")(flatten)\n",
+    "    else:\n",
+    "        dense1 = Dense(64, activation=\"relu\")(flatten)\n",
+    "    batch_norm1 = BatchNormalization()(dense1)\n",
+    "    dropout1 = Dropout(dropout)(batch_norm1)\n",
+    "    dense2 = Dense(64, activation=\"relu\")(dropout1)\n",
+    "    batch_norm2 = BatchNormalization()(dense2)\n",
+    "    dropout2 = Dropout(dropout)(batch_norm2)\n",
+    "    if key == 'inception_v3':\n",
+    "        output = Dense(len(le.classes_), activation=\"softmax\")(dense2)\n",
+    "    else:\n",
+    "        output = Dense(len(le.classes_), activation=\"sigmoid\")(dense2)\n",
+    "    model= Model(inputs=value.input, outputs=output)\n",
+    "    model_dict[key] = model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -21880,7 +21905,7 @@
     }
    ],
    "source": [
-    "font = ImageFont.truetype(\"arial.ttf\", 12)\n",
+    "font = ImageFont.truetype(\"arial.ttf\", 40)\n",
     "output_dir = \"results/Model/v2\"\n",
     "\n",
     "for model_name, model in model_dict.items():\n",
