--- a/data_preparation_v2.ipynb
+++ b/data_preparation_v2.ipynb
@@ -42,6 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Set a reandom seed for reproducable results\n",
     "RANDOM_STATE = 42"
    ]
   },
@@ -51,6 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Method to load in all images from the directory, convert them to RGB and resize them. Additionally the labels will be loaded (channel names)\n",
     "def load_dataset(target_size):\n",
     "    x, y = [], []\n",
     "    base_path = \"./data/images/\"\n",
@@ -81,6 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Read in the metadata csv and create a dictionary with channel name as key and category as value\n",
     "metadata = pd.read_csv(\"./data/metadata.csv\")\n",
     "meta_filter = metadata[[\"Channel\", \"Category\"]]\n",
     "meta_filter = meta_filter.drop_duplicates()\n",
@@ -120,6 +123,7 @@
     }
    ],
    "source": [
+    "# show an image value\n",
     "plt.imshow(x[100])\n",
     "print(f\"class: {y[100]}\")"
    ]
@@ -22192,7 +22196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4
  },
